feat: new BlockWriter implementation for block-as-file (#355)
Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>